-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: C++ - Library
-
Labels:None
-
Environment:
Linux
-
Patch Info:Patch Available
According to http://man7.org/linux/man-pages/man7/unix.7.html :
The socket's address in this namespace is given by the
additional bytes in sun_path that are covered by the specified
length of the address structure. (Null bytes in the name have no
special significance.)
This used to work after the THRIFT-1481 change because the structure was 0-initialized but was probably broken later in 3e50a9a1d01950f356242aaab0cbf5fae778b81c
I have an abstract namespace unit test and a fix coming up on GitHub.