THRIFT-3371 Abstract namespace Unix domain sockets broken in C++

This closes #637